<resources>
    <string name="app_name">Papikos</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewati</string>

    <string name="slide_1_title">Aman</string>
    <string name="slide_1_desc">Keamanan kos yang terjamin dengan adanya satpam atau pengamanan di setiap tempat kos</string>
    <string name="slide_2_title">Nyaman</string>
    <string name="slide_2_desc">Kenyamanan kos yang Harga yang terjangkau dengan fasilitas yang lengkap</string>
    <string name="slide_3_title">Strategis</string>
    <string name="slide_3_desc">Tempat kos yang dekat dengan tempat - tempat yang menunjang kebutuhan,seperti lokasi kampus ataupun tempat kerja</string>
    <string name="welcome_title">Selamat Datang di Papikos</string>
    <string name="welcome_desc">Masuk agar anda dapat mendapatkan  fitur yang menarik dari papikos</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="or_welcome">Atau melalui</string>
    <string name="register_desc"><![CDATA[Isi form dibawah & buat akun baru]]></string>
    <string name="ubah_biodata_desc">Silahkan isi biodata diri anda untuk memudahkan kita  memverifikasi akun anda</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="no_hp">No Hp</string>
    <string name="alamat">Alamat</string>
    <string name="rekening">Rekening</string>
    <string name="rekening_desc">Silahkan isi data rekening untuk memudahkan anda  dalam bertransaksi di papikos</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nama_rekening">Nama Rekening</string>
    <string name="no_rekening">No Rekening</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="konfirmasi_pembayaran_desc">silahkan masukkan bukti transaksi anda untuk memudahkan  verifikasi pemesanan kos</string>
    <string name="bukti_transfer">Bukti Transfer</string>
    <string name="tanggal">Due 09/12/2021</string>
    <string name="invoice_title">INVOICE INV00051</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="welcome">Selamat Datang, Ludfi</string>
    <string name="dashboard_desc">Temukan kos yang sesuai dengan kebutuhan anda di aplikasi papikos</string>
    <string name="kategori">Kategori</string>
    <string name="terbaru">Terbaru</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="profil">Profil</string>
    <string name="ubah_data_diri">Ubah Data Diri</string>
    <string name="ubah_sandi">Ubah Kata Sandi</string>
    <string name="transaksi">Transaksi</string>
    <string name="favorit">Favorit</string>
    <string name="tentang">Tentang Papikos</string>
    <string name="keluar">Keluar</string>
    <string name="empty_title">Tidak ada data</string>
    <string name="empty_desc">Something wrong with you why are you check notification?</string>
    <string name="nama_kos">Nama Kos</string>
    <string name="type">Type</string>
    <string name="harga">Harga</string>
    <string name="jenis">Jenis</string>
    <string name="bayar">Bayar</string>
    <string name="status">Status</string>
    <string name="kode_invoice">Kode Invoice</string>
    <string name="empty_data">DATA KOSONG!</string>
    <string name="empty_data_desc">Data yang anda perlukan tidak tersedia untuk saat ini</string>
    <string name="ulasan_kosong">Ulasan Tidak ada</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kos">Kos</string>
    <string name="facebook_app_id" translatable="false">2805059026218742</string>
    <string name="facebook_application_id" translatable="false">2805059026218742</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2805059026218742</string>
    <string name="fasilitas_kosong">Fasilitas Kosong</string>
</resources>
