<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="@color/colorwhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Detail"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/nama_kos"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/nama_kos"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Fina Vivi"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/type"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/tipe"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Type 1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/harga"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/harga"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Rp 580.000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/jenis"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/jenis"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Laki - Laki"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/kategori"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/kategori"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Kos Rumahan"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:background="@color/colorwhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Info Rekening Pemilik Kos"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/nama_bank"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/nama_bank"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="BNI"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/nama_rekening"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/nama_rekening"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="Wildan"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:text="@string/no_rekening"/>
                <TextView
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:id="@+id/no_rekening"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:text="2988398928"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>