<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".Other.Welcome">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorwhite"
        android:elevation="0dp"
        app:elevation="0dp"
        android:gravity="center">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_scrollFlags="scroll|enterAlways"
            android:gravity="center_horizontal"  >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Data Diri"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_biodata_desc"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/nama_lengkap"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:id="@+id/nama"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/nama_lengkap"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/email"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:id="@+id/email"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/no_hp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:id="@+id/telepon"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/no_hp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/jenis_kelamin"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:id="@+id/jenis_kelamin"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/jenis_kelamin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/tanggal_lahir"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:id="@+id/tanggal_lahir"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/tanggal_lahir"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGray"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/alamat"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="16dp"
                    android:gravity="top"
                    android:id="@+id/alamat"
                    android:background="@color/colorLight"
                    android:textSize="12sp"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/alamat"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ubah Biodata"
                android:id="@+id/simpan"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_blue"
                android:textColor="@color/colorwhite"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>