<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Other.Welcome">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorwhite"
        android:elevation="0dp"
        app:elevation="0dp"
        android:gravity="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_scrollFlags="scroll|enterAlways"
            android:gravity="center_horizontal"  >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Papikos"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/welcome"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:text="@string/welcome_title"
                android:gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorGray"
                android:layout_margin="8dp"
                android:text="@string/welcome_desc"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:id="@+id/masuk"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/colorwhite"
                    android:background="@drawable/button_round_blue"
                    android:text="@string/masuk"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border_blue"
                    android:layout_margin="8dp"
                    android:id="@+id/daftar"
                    android:text="@string/daftar"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:text="@string/or_welcome"
                android:gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="50dp"
                    android:background="@drawable/box"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/google"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/google"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:background="@drawable/box"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/lainnya"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lainnya"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>