<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:background="@color/colorwhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Detail Pembeli"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/nama_lengkap"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="Fina Vivi"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/no_hp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="082331759738"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/email"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="Email"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@color/colorwhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Data Rekening"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/nama_bank"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="BNI"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/nama_rekening"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="Mochamad Ludfi Rahman"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGray"
                        android:text="@string/no_rekening"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"
                        android:text="2988398928"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>